2003-11-19  Harry Lu  <harry.lu@sun.com>

	* pcs/cal-backend-file.c (cal_backend_file_update_object):
	If the component's timezone is not included in buildin timezone
	list, convert it to local default timezone.

2003-11-11  Harry Lu  <harry.lu@sun.com>

	* gui/dialogs/recurrence-page.c (make_ending_count_special):
	Make ending count of occurrences of Recurrence tab numeric only.

2003-10-31  Harry Lu <harry.lu@sun.com>

	Fix for #50387.

	* importers/icalendar-importer.c: (support_format_fn):
	Call icalcomponent_is_valid() to check whether the returned 
	icalcomponent is valid.

2003-10-08  Harry Lu  <harry.lu@sun.com>

	* gui/dialogs/alarm-options.glade: Make repeat-quantity and 
	repeat-value of alarm option dialog numeric only.
	* gui/dialogs/task-details-page.glade: Make percent-complete
	of task details dialog numeric only.

2003-09-16  Harry Lu  <harry.lu@sun.com>

	* gui/apps_evolution_calendar.schemas: change last_notification_time's
	type from string to int.

2003-09-11  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* conduits/todo/Makefile.am:
	Statically link with wombat. Fix broken ETodo conduit
	(Mdk bug #5348)

2003-09-04  Dan Winship  <danw@ximian.com>

	* gui/Makefile.am (IDL_GENERATED): Don't compile the calendar idl
	here. It's already in libcal-client.

2003-08-27  Hans Petter Jansson  <hpj@ximian.com>

	Fixes #29032.

	* gui/dialogs/task-details-page.c (status_changed): When task status
	is set to "In Progress", set percent complete to 50% only if it was
	previously set to 0% or 100%.

2003-08-26  Jack Jia  <jack.jia@sun.com>

	** Fixes #47863.

	* gui/alarm-notify/alarm-notify.c (AlarmNotify_removeCalendar): set
	the initial value of lc_ptr and orig_str_ptr to NULL to avoid crash.

2003-08-21  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* gui/alarm-notify/notify-main.c: (main):
	Ensure we get UTF-8 strings from gettext.

2002-08-20  Hans Petter Jansson  <hpj@ximian.com>

	* gui/e-itip-control.c (start_defalt_server): Rename to